# SimpleGameDemo

./: .clang-format  .gitignore  CMakeLists.txt  README.md
licenses/: README.md
resources/models/: CreatureRedBird.dae  CreatureWhiteRabbit.dae  CreatureWolf.dae  ObjectAnvil.dae  ObjectBirchTree.dae  ObjectBrownMushroom.dae  ObjectBush1.dae  ObjectBush2.dae  ObjectCutBush.dae  ObjectDeadTree.dae  ObjectFelledDeadTree.dae  ObjectFelledTree.dae  ObjectFilledPitFurnace.dae  ObjectFirTree.dae  ObjectHole.dae  ObjectIronOre.dae  ObjectLitCampfire.dae  ObjectMineEntrance.dae  ObjectPinkFlower.dae  ObjectPitFurnace.dae  ObjectStone.dae  ObjectStoneBlock.dae  ObjectStoneBoulder.dae  ObjectStoneWall.dae  ObjectStoneWallDoor.dae  ObjectTallGrass.dae  ObjectUnlitCampfire.dae  ObjectWoodLog.dae  ObjectWoodPlank.dae  ObjectWoodWallEast.dae  ObjectWoodWallNorth.dae  ObjectWoodWallSouth.dae  ObjectWoodWallWest.dae  ObjectWoodenBox.dae  Player.dae  PlayerAura.dae  PlayerFemale.dae
src/: StdAfx.hpp  main.cpp
